--- a/index.html
+++ b/index.html
@@ -5,28 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Color-Generation</title>
 </head>
 <body>
     <div class="col">
         <h2></h2>
-        <button>lock</button>
+        <button><i class="font-lock fa-solid fa-lock-open"></i></button>
     </div>
     <div class="col">
         <h2></h2>
-        <button>lock</button>
+        <button><i class="font-lock fa-solid fa-lock-open"></i></button>
     </div>
     <div class="col">
         <h2></h2>
-        <button>lock</button>
+        <button><i class="font-lock fa-solid fa-lock-open"></i></button>
     </div>
     <div class="col">
         <h2></h2>
-        <button>lock</button>
+        <button><i class="font-lock fa-solid fa-lock-open"></i></button>
     </div>
     <div class="col">
         <h2></h2>
-        <button>lock</button>
+        <button><i class="font-lock fa-solid fa-lock-open"></i></button>
     </div>
     <h1 class="text-space">Press to Space</h1>
     <script src="script.js"></script>
