--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <div class="col">
+        <div class="title-wrap">
+            <div class="hover-text">Click to Copy</div>
         <h2></h2>
+        </div>
         <button><i class="font-lock fa-solid fa-lock-open"></i></button>
     </div>
     <div class="col">
