--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2></h2>
         <button><i class="font-lock fa-solid fa-lock-open"></i></button>
     </div>
-    <h1 class="text-space">Press to Space</h1>
+    <h1 class="text-space"></h1>
     <script src="script.js"></script>
 </body>
 </html>
